--- a/es/index.html
+++ b/es/index.html
@@ -98,10 +98,17 @@
                 </a>
             </div>
             
-            <div class="coming-soon-placeholder">
-                Próximamente
+           <div class="project-card">
+    <a href="/palomaaguado.github.io/es/nike.html">
+        <img src="/palomaaguado.github.io/es/proyectos/nike-cover.jpg" alt="Nike Case Study">
+        <div class="overlay">
+            <div class="text">
+                Nike x Shuttlerock<br>
+                <span>Case Study & Mockup</span>
             </div>
         </div>
+    </a>
+</div>
 
         <h2 class="section-title">Estrategia Inmobiliaria</h2>
         <div class="gallery-grid">
