--- a/es/nike.html
+++ b/es/nike.html
@@ -71,7 +71,7 @@
         <div class="case-visual">
             <div class="iphone-mockup">
                 <video autoplay muted loop>
-                    <source src="../es/proyectos/nike-reel.mp4" type="video/mp4">
+                    <source src="../es/proyectos/Nike case.mp4" type="video/mp4">
                     <img src="../es/proyectos/nike-mockup-fallback.jpg" alt="Nike Reel Mockup">
                 </video>
             </div>
