--- a/es/nike.html
+++ b/es/nike.html
@@ -85,8 +85,9 @@
             </div>
 
             <div class="image-gallery">
-                <img src="../es/proyectos/nike-asset1.jpg" alt="Moodboard 1">
-                <img src="../es/proyectos/nike-asset2.jpg" alt="Moodboard 2">
+                <img src="../es/proyectos/nike1.jpg" alt="Moodboard 1">
+                <img src="../es/proyectos/nike2.jpg" alt="Moodboard 2">
+                <img src="../es/proyectos/nike3.jpg" alt="Moodboard 3">
             </div>
         </div>
 
