--- a/es/index.html
+++ b/es/index.html
@@ -100,7 +100,7 @@
             
            <div class="project-card">
     <a href="/palomaaguado.github.io/es/nike.html">
-        <img src="/palomaaguado.github.io/es/proyectos/nike-cover.jpg" alt="Nike Case Study">
+        <img src="/palomaaguado.github.io/es/proyectos/nike5.jpg" alt="Nike Case Study">
         <div class="overlay">
             <div class="text">
                 Nike x Shuttlerock<br>
