--- a/es/index.html
+++ b/es/index.html
@@ -42,7 +42,7 @@
             height: 500px;
             overflow: hidden;
             position: relative;
-            margin-bottom: 0 !important; /* Reseteamos margen para el grid */
+            margin-bottom: 0 !important; 
         }
 
         .project-card img {
@@ -51,23 +51,9 @@
             object-fit: cover;
         }
 
-        /* Caja de Próximamente para rellenar el hueco */
-        .coming-soon-placeholder {
-            height: 500px;
-            background-color: #f9f9f9;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: #ccc;
-            text-transform: uppercase;
-            letter-spacing: 2px;
-            font-size: 0.8rem;
-            border: 1px solid #eee;
-        }
-
         @media (max-width: 768px) {
             .gallery-grid { grid-template-columns: 1fr; }
-            .project-card, .coming-soon-placeholder { height: 350px; }
+            .project-card { height: 350px; }
         }
     </style>
 </head>
@@ -98,19 +84,18 @@
                 </a>
             </div>
             
-           <div class="project-card">
-    <a href="/palomaaguado.github.io/es/nike.html">
-        <img src="/palomaaguado.github.io/es/proyectos/nike5.jpg" alt="Nike Case Study">
-        <div class="overlay">
-            <div class="text">
-                Nike x Shuttlerock<br>
-                <span>Case Study & Mockup</span>
+            <div class="project-card">
+                <a href="/palomaaguado.github.io/es/nike.html">
+                    <img src="/palomaaguado.github.io/es/proyectos/nike5.jpg" alt="Nike Case Study">
+                    <div class="overlay">
+                        <div class="text">
+                            Nike x Shuttlerock<br>
+                            <span>Case Study & Mockup</span>
+                        </div>
+                    </div>
+                </a>
             </div>
-        </div>
-    </a>
-</div>
-
-        <h2 class="section-title">Estrategia Inmobiliaria</h2>
+        </div> <h2 class="section-title">Estrategia Inmobiliaria</h2>
         <div class="gallery-grid">
             <div class="project-card">
                 <a href="/palomaaguado.github.io/es/cafur.html">
