--- a/es/nike.html
+++ b/es/nike.html
@@ -104,7 +104,7 @@
     </header>
 
     <nav style="padding: 30px 5%;">
-        <a href="index.html" style="text-decoration: none; color: #111; font-weight: bold; letter-spacing: 1px;">← VOLVER AL PORTFOLIO</a>
+        <a href="index.html" style="text-decoration: none; color: #111; font-weight: bold; letter-spacing: 1px;">← Volver a Proyectos</a>
     </nav>
 
     <main>
