--- a/en/index.html
+++ b/en/index.html
@@ -98,10 +98,17 @@
                 </a>
             </div>
             
-            <div class="coming-soon-placeholder">
-                Coming Soon
+            <div class="project-card">
+                <a href="/palomaaguado.github.io/en/nike.html">
+                    <img src="/palomaaguado.github.io/es/proyectos/nike5.jpg" alt="Nike Case Study">
+                    <div class="overlay">
+                        <div class="text">
+                            Nike x Shuttlerock<br>
+                            <span>Case Study & Mockup</span>
+                        </div>
+                    </div>
+                </a>
             </div>
-        </div>
 
         <h2 class="section-title">Real Estate Strategy</h2>
         <div class="gallery-grid">
