--- a/es/cuento-leo.html
+++ b/es/cuento-leo.html
@@ -36,7 +36,7 @@
             <div class="carousel-wrapper">
                 <button class="nav-arrow prev-arrow" onclick="moveCarousel(-1)">❮</button>
                 <div class="carousel-container" id="thumbContainer">
-                    <div class="carousel-item active" onclick="updateView(this)"><img src="../es/proyectos/leo_portada.jpg"></div>
+                    <div class="carousel-item active" onclick="updateView(this)"><img src="../es/proyectos/leo.png"></div>
                     <div class="carousel-item" onclick="updateView(this)"><img src="../es/proyectos/leo_pag1.jpg"></div>
                     <div class="carousel-item" onclick="updateView(this)"><img src="../es/proyectos/leo_pag2.jpg"></div>
                     <div class="carousel-item" onclick="updateView(this)"><img src="../es/proyectos/leo_pag3.jpg"></div>
