--- a/es/index.html
+++ b/es/index.html
@@ -120,40 +120,29 @@
                     </div>
                 </a>
             </div>
-           <div class="project-item">
-    <a href="cuento-leo.html">
-        <div class="project-image">
+            <h2 class="section-title">Storytelling visual e IA</h2>
+        <div class="gallery-grid">
+            <div class="project-card">
+            <a href="/palomaaguado.github.io/es/cuento-leo.html">
             <img src="../es/proyectos/leo.png" alt="Leo - Cuento Ilustrado">
-            <div class="project-overlay">
-                <div class="overlay-content">
-                    <h3>Leo</h3>
-                    <span>Visual Storytelling & IA</span>
-                </div>
+             <div class="overlay">
+                     <span>Visual Storytelling & IA</span>
+                      </div>
+                    </div>
+                </a>
             </div>
-        </div>
-        <div class="project-info">
-            <h4>Leo</h4>
-            <p>Art Direction & Gen-AI</p>
-        </div>
-    </a>
-</div>
-
-<div class="project-item">
-    <a href="cuento-alexa.html">
+    <div class="project-card">
+    <a href="/palomaaguado.github.io/es/cuento-alexa.html">
         <div class="project-image">
             <img src="../es/proyectos/alexa_portada.jpg" alt="Alexa - Cuento Ilustrado">
             <div class="project-overlay">
-                <div class="overlay-content">
+                <div class="overlay">
                     <h3>Alexa</h3>
                     <span>Visual Storytelling & IA</span>
                 </div>
             </div>
         </div>
-        <div class="project-info">
-            <h4>Alexa</h4>
-            <p>Art Direction & Gen-AI</p>
-        </div>
-    </a>
+       </a>
 </div>
         </div>
     </main>
