--- a/es/index.html
+++ b/es/index.html
@@ -73,7 +73,7 @@
         <h2 class="section-title">Lifestyle & Brands</h2>
         <div class="gallery-grid">
             <div class="project-card">
-                <a href="/palomaaguado.github.io/es/proyectos/kukicha.html">
+                <a href="/palomaaguado.github.io/es/kukicha.html">
                     <img src="/palomaaguado.github.io/es/proyectos/packaging.png" alt="Kukicha">
                     <div class="overlay">
                         <div class="text">
@@ -95,7 +95,9 @@
                     </div>
                 </a>
             </div>
-        </div> <h2 class="section-title">Estrategia Inmobiliaria</h2>
+        </div> 
+
+        <h2 class="section-title">Estrategia Inmobiliaria</h2>
         <div class="gallery-grid">
             <div class="project-card">
                 <a href="/palomaaguado.github.io/es/cafur.html">
@@ -120,30 +122,33 @@
                     </div>
                 </a>
             </div>
-            <h2 class="section-title">Storytelling visual e IA</h2>
+        </div>
+
+        <h2 class="section-title">Storytelling visual e IA</h2>
         <div class="gallery-grid">
             <div class="project-card">
-            <a href="/palomaaguado.github.io/es/cuento-leo.html">
-            <img src="../es/proyectos/leo.png" alt="Leo - Cuento Ilustrado">
-             <div class="overlay">
-                     <span>Visual Storytelling & IA</span>
-                      </div>
+                <a href="/palomaaguado.github.io/es/cuento-leo.html">
+                    <img src="../es/proyectos/leo.png" alt="Leo - Cuento Ilustrado">
+                    <div class="overlay">
+                        <div class="text">
+                            Leo<br>
+                            <span>Visual Storytelling & IA</span>
+                        </div>
                     </div>
                 </a>
             </div>
-    <div class="project-card">
-    <a href="/palomaaguado.github.io/es/cuento-alexa.html">
-        <div class="project-image">
-            <img src="../es/proyectos/alexa_portada.jpg" alt="Alexa - Cuento Ilustrado">
-            <div class="project-overlay">
-                <div class="overlay">
-                    <h3>Alexa</h3>
-                    <span>Visual Storytelling & IA</span>
-                </div>
+
+            <div class="project-card">
+                <a href="/palomaaguado.github.io/es/cuento-alexa.html">
+                    <img src="../es/proyectos/alexa_portada.jpg" alt="Alexa - Cuento Ilustrado">
+                    <div class="overlay">
+                        <div class="text">
+                            Alexa<br>
+                            <span>Visual Storytelling & IA</span>
+                        </div>
+                    </div>
+                </a>
             </div>
-        </div>
-       </a>
-</div>
         </div>
     </main>
 
