--- a/es/index.html
+++ b/es/index.html
@@ -128,7 +128,7 @@
         <div class="gallery-grid">
             <div class="project-card">
                 <a href="/palomaaguado.github.io/es/cuento-leo.html">
-                    <img src="../es/proyectos/leo.png" alt="Leo - Cuento Ilustrado">
+                    <img src="/palomaaguado.github.io/es/proyectos/leo.png" alt="Leo - Cuento Ilustrado">
                     <div class="overlay">
                         <div class="text">
                             Leo<br>
