--- a/es/cuento-leo.html
+++ b/es/cuento-leo.html
@@ -36,10 +36,11 @@
             <div class="carousel-wrapper">
                 <button class="nav-arrow prev-arrow" onclick="moveCarousel(-1)">❮</button>
                 <div class="carousel-container" id="thumbContainer">
-                    <div class="carousel-item active" onclick="updateView(this)"><img src="../es/proyectos/leo.png"></div>
-                    <div class="carousel-item" onclick="updateView(this)"><img src="../es/proyectos/leo_pag1.jpg"></div>
-                    <div class="carousel-item" onclick="updateView(this)"><img src="../es/proyectos/leo_pag2.jpg"></div>
-                    <div class="carousel-item" onclick="updateView(this)"><img src="../es/proyectos/leo_pag3.jpg"></div>
+                    <div class="carousel-item active" onclick="updateView(this)"><img src="../es/proyectos/leo-portada.png"></div>
+                    <div class="carousel-item" onclick="updateView(this)"><img src="../es/proyectos/leo-amigo.png"></div>
+                    <div class="carousel-item" onclick="updateView(this)"><img src="../es/proyectos/leo-armonia.png"></div>
+                    <div class="carousel-item" onclick="updateView(this)"><img src="../es/proyectos/leo-campamento.png"></div>
+                    <div class="carousel-item" onclick="updateView(this)"><img src="../es/proyectos/leo-familia.png"></div>
                 </div>
                 <button class="nav-arrow next-arrow" onclick="moveCarousel(1)">❯</button>
             </div>
