--- a/es/cuento-leo.html
+++ b/es/cuento-leo.html
@@ -48,7 +48,7 @@
 
         <div class="briefing-info">
             <h1 style="text-transform: uppercase; letter-spacing: 2px; margin-bottom: 5px;">Leo</h1>
-            <p style="color: #888; font-style: italic;">Escrito por [Nombre de tu amiga]</p>
+            <p style="color: #888; font-style: italic;">Escrito por Carol Vila Micó</p>
             
             <div style="margin-top: 20px;">
                 <span class="tag ia-badge">Art Direction & IA</span>
