--- a/es/cuento-leo.html
+++ b/es/cuento-leo.html
@@ -36,7 +36,7 @@
             <div class="carousel-wrapper">
                 <button class="nav-arrow prev-arrow" onclick="moveCarousel(-1)">❮</button>
                 <div class="carousel-container" id="thumbContainer">
-                    <div class="carousel-item active" onclick="updateView(this)"><img src="../es/proyectos/leo-portada.png"></div>
+                    <div class="carousel-item active" onclick="updateView(this)"><img src="../es/proyectos/leo1.png"></div>
                     <div class="carousel-item" onclick="updateView(this)"><img src="../es/proyectos/leo-amigo.png"></div>
                     <div class="carousel-item" onclick="updateView(this)"><img src="../es/proyectos/leo-armonia.png"></div>
                     <div class="carousel-item" onclick="updateView(this)"><img src="../es/proyectos/leo-campamento.png"></div>
