--- a/es/cuento-leo.html
+++ b/es/cuento-leo.html
@@ -104,9 +104,11 @@
             
             <div class="carousel-wrapper">
                 <div class="carousel-container" id="thumbContainer">
-                    <div class="carousel-item active" onclick="updateView(this)"><img src="../es/proyectos/leo.png" width="100%"></div>
-                    <div class="carousel-item" onclick="updateView(this)"><img src="../es/proyectos/leo_pag1.jpg" width="100%"></div>
-                    <div class="carousel-item" onclick="updateView(this)"><img src="../es/proyectos/leo_pag2.jpg" width="100%"></div>
+                    <div class="carousel-item active" onclick="updateView(this)"><img src="../es/proyectos/leo1.png" width="100%"></div>
+                    <div class="carousel-item" onclick="updateView(this)"><img src="../es/proyectos/leo-amigo.png" width="100%"></div>
+                    <div class="carousel-item" onclick="updateView(this)"><img src="../es/proyectos/leo-armonia.png" width="100%"></div>
+                     <div class="carousel-item" onclick="updateView(this)"><img src="../es/proyectos/leo-campamento.png" width="100%"></div>
+                     <div class="carousel-item" onclick="updateView(this)"><img src="../es/proyectos/leo-familia.png" width="100%"></div>
                 </div>
             </div>
         </div>
