--- a/es/cuento-leo.html
+++ b/es/cuento-leo.html
@@ -100,7 +100,7 @@
 
     <main class="case-container">
         <div class="book-gallery">
-            <img id="activePage" src="../es/proyectos/leo.png" class="main-view" alt="Leo">
+            <img id="activePage" src="../es/proyectos/leo1.png" class="main-view" alt="Leo">
             
             <div class="carousel-wrapper">
                 <div class="carousel-container" id="thumbContainer">
