--- a/es/cuento-leo.html
+++ b/es/cuento-leo.html
@@ -95,7 +95,7 @@
 <body>
 
     <nav style="padding: 40px 5%;">
-        <a href="../index.html" style="text-decoration: none; color: #000; font-size: 0.8rem; letter-spacing: 2px;">← VOLVER</a>
+        <a href="/palomaaguado.github.io/es/index.html" style="text-decoration: none; color: #000; font-size: 0.8rem; letter-spacing: 2px;">← Volver a Proyectos</a>
     </nav>
 
     <main class="case-container">
