--- a/es/cuento-leo.html
+++ b/es/cuento-leo.html
@@ -182,7 +182,7 @@
                     </div>
                 </div>
                 <div class="back">
-                    <img src="../es/proyectos/leo-familia.png" class="full-img">
+                    <img src="../es/proyectos/leo2.png" class="full-img">
                 </div>
             </div>
 
